# egui-nonogram

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
assets/: index.html  manifest.json  sw.js
examples/: webapp.rs
src/: game.rs  lib.rs  widget.rs
