[package]
name = "egui-nonogram"
version = "0.1.1"
edition = "2021"
rust-version = "1.80"
description = "A nonogram (picross) puzzle game library for egui"
license = "MIT OR Apache-2.0"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
repository = "https://github.com/cecton/egui-nonogram"
homepage = "https://cecton.github.io/egui-nonogram"
documentation = "https://docs.rs/egui-nonogram"
keywords = ["egui", "nonogram", "picross", "widget", "gui"]
categories = ["game-engines", "gui"]
exclude = ["/examples", "/.github"]

[lib]
name = "egui_nonogram"

[dependencies]
egui = { version = "0.35", default-features = false }
fastrand = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
fastrand = { version = "2", features = ["js"] }

[dev-dependencies]
xtask-wasm = { version = "0.6.5", features = ["run-example", "wasm-opt"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
eframe = { version = "0.35", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
serde = { version = "1", features = ["derive"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
    "MediaQueryList",
    "Window",
] }
